Migrating bootstrap to 3.0.3.

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block page %}
 <div class='row' id='page'>
-    <div id='content' class='span8'>
+    <div id='content' class='col-md-8'>
         <div data-bind='template: { name: templateId(), afterRender: afterRenderTemplate}'>
         </div>
         <div id='progress-modal' class='modal hide fade'>
@@ -20,25 +20,25 @@
             </div>
         </div>
     </div>
-    <div id='sidebar' class='span4 filler sidebar'>
+    <div id='sidebar' class='col-md-4 filler sidebar'>
         <div data-bind='ifnot: isInstructionsRound'>
             <h3>Chat</h3>
             <div data-bind='ifnot: chatEnabled'>
-                <div class='alert alert-error'>
-                    <i class='icon-warning-sign'></i> Chat is currently disabled.
+                <div class='alert alert-danger'>
+                    <i class='fa-warning'></i> Chat is currently disabled.
                 </div>
             </div>
             <form id="chat-form" class='form-inline' data-bind='submit: submitChatMessage' >
-                <div class='input-prepend input-block-level'>
-                    <span class='add-on'><i id='chat-icon' class='text-info icon-comment'></i></span>
-                    <input id='chatMessage' type="text" placeholder="Chat with your group">
+                <div class='input-group'>
+                    <span class='input-group-addon'><i id='chat-icon' class='text-info fa fa-comment'></i></span>
+                    <input id='chatMessage' class="form-control" type="text" placeholder="Chat with your group">
                 </div>
             </form>
             <div class='chat-sidebar'>
                 <div id='chat-div'>
                     <div class='chat-messages' data-bind='foreach: chatMessages'>
-                        <i class='icon-user muted'></i> <strong data-bind='text: participant_number'></strong>
-                        <small><i class='icon-double-angle-right'></i></small> <span data-bind='text: value'></span>
+                        <i class='fa fa-user muted'></i> <strong data-bind='text: participant_number'></strong>
+                        <small><i class='fa fa-angle-double-right'></i></small> <span data-bind='text: value'></span>
                         <br>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
         </tbody>
     </table>
     <div class='alert alert-info'>
-        <i class='icon-info-sign'></i> Remember, only <b>one</b> of your sessions will be selected at random for
+        <i class='fa fa-info-circle'></i> Remember, only <b>one</b> of your sessions will be selected at random for
         payment.  We will now move on to the next session.
     </div>
     <ul class='pager'>
@@ -112,7 +112,7 @@
     </p>
     <h3>Harvest Choice</h3>
     <p>
-    You will have a maximum of <i class='icon-clock'></i><span data-bind='text: roundDuration'></span> seconds to make a
+    You will have a maximum of <i class='fa fa-clock-o'></i><span data-bind='text: roundDuration'></span> seconds to make a
     harvest decision each round.  A countdown will alert you when there are 
     <span data-bind='text: warningCountdownTime'></span> seconds remaining to make a harvest choice.  When the countdown
     reaches zero, any value you have selected will be submitted.  <strong>The default harvest is zero.</strong>
@@ -237,8 +237,8 @@ data-bind='css: { "badge-important": readyParticipants() < (participantCount() /
 </p>
 </div>
 </div>
-<div class='progress progress-success progress-striped active'>
-<div class='bar' data-bind='style: { width: readyParticipantsPercentage() + "%" }'></div>
+<div class='progress progress-striped active'>
+    <div class='progress-bar progress-bar-success ' role="progressbar" data-bind='style: { width: readyParticipantsPercentage() + "%" }'></div>
 </div>
 </script>
 <script type='text/html' id='WELCOME'>
@@ -248,11 +248,11 @@ data-bind='css: { "badge-important": readyParticipants() < (participantCount() /
 </p>
 <div class='well'>
     <div class='alert alert-info'>
-    <i class='text-success icon-info-sign'></i> Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
+    <i class='text-success fa fa-info-circle'></i> Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
     the other participants</strong>.
     </div>
     <div class='alert alert-info'>
-    <i class='text-success icon-info-sign'></i>
+    <i class='text-success fa fa-info-circle'></i>
     Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices before the experiment begins.
     </div>
     <div>
@@ -396,23 +396,23 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </script>
 <script type='text/html' id='REGULAR'>
 <div class='row'>
-    <div class='span5'>
+    <div class='col-md-7'>
         <h3>My Status</h3>
         <div class='row'>
-            <div class='alert bound-status-dashboard span1'>
-                <h4 id="dashboard-last-harvest">Last Harvest <i class='icon-info-sign' data-content="The number of trees you harvested last round."></i> </h4>
+            <div class='alert alert-warning bound-status-dashboard col-md-2'>
+                <h4 id="dashboard-last-harvest">Last Harvest <i class='fa fa-info-circle' data-content="The number of trees you harvested last round."></i> </h4>
                 <p>
                 <strong class='text-success'><span data-bind='text:lastHarvestDecision'></span></strong>
                 </p>
             </div>
-            <div class='alert bound-status-dashboard span1'>
-                <h4 id='dashboard-storage'>Savings <i class='icon-info-sign' data-bind='attr: {"data-content": "You need at least " + costOfLiving() + " trees to survive each round."}'></i> </h4>
+            <div class='alert alert-warning bound-status-dashboard col-md-2'>
+                <h4 id='dashboard-storage'>Savings <i class='fa fa-info-circle' data-bind='attr: {"data-content": "You need at least " + costOfLiving() + " trees to survive each round."}'></i> </h4>
                 <p>
-                <strong><span data-bind='text: clampedStorage'></span> </strong>
+                <strong><span data-bind='text: clampedStorage'></span></strong>
                 </p>
             </div>
-            <div class='alert bound-status-dashboard span1'>
-                <h4 id='dashboard-time'><i class='icon-time'></i> Time</h4>
+            <div class='alert alert-warning bound-status-dashboard col-md-2'>
+                <h4 id='dashboard-time'><i class='fa fa-clock-o'></i> Time</h4>
                 <p>
                 <strong data-bind='css: { "text-error": secondsLeft() < warningCountdownTime(), "text-info": secondsLeft() > warningCountdownTime()}'>
                     <span data-bind='text: secondsLeft'></span>
@@ -421,7 +421,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
             </div>
         </div>
     </div>
-    <div class='span3'>
+    <div class='col-md-5'>
         <h3>Group Status</h3>
         <table class='table table-bordered table-condensed group-status'>
             <colgroup>
@@ -462,15 +462,15 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </div>
 {% comment %} resource visualization section {% endcomment %}
 <div class='row'>
-    <div data-bind='css: { span8: ! canObserveOtherGroup() }, template: { name: "resource-visualization-template" }'></div>
+    <div data-bind='css: { "col-md-12": ! canObserveOtherGroup() }, template: { name: "resource-visualization-template" }'></div>
 </div>
 {% comment %} resource harvest decision section {% endcomment %}
 <div class='row' data-bind='ifnot: isResourceEmpty'>
-    <div class='span8'>
+    <div class='col-md-8'>
         <h3 class='compact'>Harvest</h3>
         <div data-bind='ifnot: alive'>
-            <div class='alert alert-error'>
-                <b><i class='icon-ambulance'></i></b> You didn't harvest enough trees to meet the cost of living and are now
+            <div class='alert alert-danger'>
+                <b><i class='fa fa-ambulance'></i></b> You didn't harvest enough trees to meet the cost of living and are now
                 <b>deceased</b>.  You will not be able to chat or submit harvest decisions until this session is over.
             </div>
         </div>
@@ -491,7 +491,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
     <div class='well'>
     <center><img alt='depleted trees' src="{% static 'images/bound/depleted-trees.jpg' %}" class="img-polaroid" width="425" height="282"></center>
     </div>
-    <div class='alert alert-error'><i class='icon-warning-sign'></i> There are no more trees to harvest. Please wait until the next round begins.</div>
+    <div class='alert alert-danger'><i class='fa fa-warning'></i> There are no more trees to harvest. Please wait until the next round begins.</div>
 </div>
 <div data-bind='ifnot: isResourceEmpty'>
 {% comment %} resource level visualization pre-regrowth {% endcomment %}
@@ -515,17 +515,17 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </script>
 <script type='text/html' id='resource-visualization-template'>
 <div data-bind='if: isPracticeRound'>
-    <div class='alert alert-error alert-block'>
+    <div class='alert alert-danger alert-block'>
         <h4>PRACTICE ROUND</h4>
         This is a practice round.  The decisions you make in this round will <b>NOT</b> contribute to your earnings.
     </div>
 </div>
 
-<div data-bind='css: { span4: canObserveOtherGroup }'>
+<div data-bind='css: { "col-md-4": canObserveOtherGroup }'>
 <h3 class='compact'>My Group</h3>
 <div data-bind='template: { name: "tree-template", data: myGroup }'></div>
 </div>
-<div data-bind='if: canObserveOtherGroup, css: { span4: canObserveOtherGroup }'>
+<div data-bind='if: canObserveOtherGroup, css: { "col-md-4" : canObserveOtherGroup }'>
     <h3 class='compact'>Other Group</h3>
     <div data-bind='template: {name: "tree-template", data: otherGroup }'></div>
 </div>
@@ -692,7 +692,7 @@ function onYouTubeIframeAPIReady() {
                     return;
                 }
                 model.clearCurrentInterval();
-                $('#content').removeClass('span12').addClass('span8');
+                $('#content').removeClass('col-md-12').addClass('col-md-8');
                 $('#sidebar').show();
                 model.activateTemplate("PAID_EXPERIMENT_INSTRUCTIONS");
             };
@@ -857,11 +857,11 @@ function onYouTubeIframeAPIReady() {
                 if (chatEnabled) {
                     console.debug("chat was enabled, showing sidebar explicitly");
                     $('#sidebar').show();
-                    $('#content').removeClass('span12').addClass('span8');
+                    $('#content').removeClass('col-md-12').addClass('col-md-8');
                 }
                 else {
                     $('#sidebar').hide();
-                    $('#content').removeClass('span8').addClass('span12');
+                    $('#content').removeClass('col-md-8').addClass('col-md-12');
                 }
             }
             model.afterRenderTemplate = function(elements) {
@@ -876,7 +876,7 @@ function onYouTubeIframeAPIReady() {
                                 );
                         case "FINAL_DEBRIEFING":
                             $('#sidebar').hide();
-                            $('#content').removeClass('span8').addClass('span12');
+                            $('#content').removeClass('col-md-8').addClass('col-md-12');
                             break;
                         default:
                             break;
