--- a/vcweb/core/templates/forms/base.html
+++ b/vcweb/core/templates/forms/base.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block page %}
-<form id='vcweb-form' method='post' class='form-horizontal'>
-{% csrf_token %}
-{% block form %}
-{% endblock form %}
-</form>
+    {% block form-title %}
+    {% endblock form-title %}
+    <form id='vcweb-form' method='post' class='form-horizontal'>
+    {% csrf_token %}
+        {% block form %}
+        {% endblock form %}
+    </form>
 {% endblock page %}
 {% block javascript %}
     {{ block.super }}
