--- a/vcweb/core/templates/forms/chat-template.html
+++ b/vcweb/core/templates/forms/chat-template.html
@@ -16,8 +16,10 @@
 </div>
 <form id="chatform" class='form-horizontal'>
     <input id='chatText' type="text" />
-    <div class='form-actions'>
-        <button type='submit' data-bind='click: submitChatMessage'>Send</button>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button type='submit' data-bind='click: submitChatMessage'>Send</button>
+        </div>
     </div>
 </form>
 
