--- a/vcweb/core/templates/forms/chat.html
+++ b/vcweb/core/templates/forms/chat.html
@@ -27,8 +27,10 @@ Communication Round: {{experiment}}
 </div>
 <form id="chatform" class='form-horizontal'>
     <input id='chatText' type="text" />
-    <div class='form-actions'>
-        <button type='submit'>Send</button>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button type='submit'>Send</button>
+        </div>
     </div>
 </form>
 {% endblock %}
