--- a/vcweb/core/templates/account/password_reset_form.html
+++ b/vcweb/core/templates/account/password_reset_form.html
@@ -1,14 +1,16 @@
 {% extends "forms/base.html" %}
 {% block title %}Password Reset{% endblock %}
-
-{% block form %}
+{% block form-title %}
 <h3>Reset your password</h3>
 <p>
-Please enter your email address below and we'll send you instructions for setting a new password.
+    Please enter your email address below and we'll send you instructions for setting a new password.
 </p>
+{% endblock form-title %}
+{% block form %}
 {% include "includes/bootstrap-form.html" %}
-<div class='form-actions'>
-    <button type='submit' class='btn btn-primary'>Submit</button>
-</div>
+    <div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+      <button type='submit' class='btn btn-primary'>Submit</button>
+    </div>
+  </div>
 {% endblock %}
-
