--- a/vcweb/core/templates/account/profile.html
+++ b/vcweb/core/templates/account/profile.html
@@ -1,20 +1,19 @@
 {% extends "forms/base.html" %}
 
-{% block head %}
-{{ block.super }}
-
-{% endblock head %}
-
 {% block title %}Your Account{% endblock %}
 
-{% block form %}
-<h3>{{ request.user.get_full_name }}</h3>
-<div id="error-messages"></div>
+{% block form-title %}
+    <h3>{{ request.user.get_full_name }}</h3>
+    <div id="error-messages"></div>
+{% endblock form-title %}
 
+{% block form %}
 {% include "includes/bootstrap-form.html" %}
-<div class='controls'>
-    <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
-</div>
+    <div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+      <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
+    </div>
+  </div>
 
 {% endblock %}
 
